--- a/ConcertsDataBase/App.Config
+++ b/ConcertsDataBase/App.Config
@@ -6,6 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="ConcertsEntities" connectionString="metadata=res://*/ConcertsModel.csdl|res://*/ConcertsModel.ssdl|res://*/ConcertsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-KGJ7JQN\SQLEXPRESS;initial catalog=Concerts;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConcertsEntities1" connectionString="metadata=res://*/ModelConcerts.csdl|res://*/ModelConcerts.ssdl|res://*/ModelConcerts.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-KGJ7JQN\SQLEXPRESS;initial catalog=Concerts;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
